{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 136,
  "lineage": "530bf12d-993d-e982-1053-016dd8e1fe0d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-10-25T04:55:14.484-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proven-mystery-473711-n3/global/firewalls/allow-internal-private",
            "log_config": [],
            "name": "allow-internal-private",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "priority": 1000,
            "project": "proven-mystery-473711-n3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/firewalls/allow-internal-private",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "privada"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-25T04:55:14.790-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proven-mystery-473711-n3/global/firewalls/allow-ssh-from-bastion",
            "log_config": [],
            "name": "allow-ssh-from-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "priority": 1000,
            "project": "proven-mystery-473711-n3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/firewalls/allow-ssh-from-bastion",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "privada"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-25T04:55:14.971-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proven-mystery-473711-n3/global/firewalls/allow-ssh-public",
            "log_config": [],
            "name": "allow-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "priority": 1000,
            "project": "proven-mystery-473711-n3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/firewalls/allow-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/disks/vm-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-bastion",
            "instance_id": "2906726151211779117",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "macale:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQW3hODvTHK138k8UdfMz3bfS7PQb1PuU+gnWQjOHD5eML+YAbRNNoQxUTOkMQ7zzxz/96skpicz7PHXADnlbmZYuQ6wY+dmfRDRJcFa5U563k0DSUioFDwkK2Z1HjHHJVTenQHj/r+OfGSQ8Xe0sPFNzCY4cUO2xuD6cAccX8QIKt1YWkc/AhYsNYB3vUL/ci10nWUUtDokqH+ad6VRC9B/JO3WQDkcKfSc0aMunJmwruuROMMDtJqrKzMqbNZGHz/ym92KMaheP3EE9OfJaA1Zlg3feU0iceb37lJgH2KtjbFwkIZ0N9N46rqGroF8hfXxbBLvJPgYCjYouV2VVexgkUHvAzdmyRPhyfUmL+eUmhfcEmUZZ+WgpBz56SxtXf/R2vW0DodoN/JZSFnhlT7Gj8xHOiovKgrTcN78F/+c [...]
            },
            "metadata_fingerprint": "lq5hwPOwq5o=",
            "name": "vm-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.107.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-publica",
                "subnetwork_project": "proven-mystery-473711-n3"
              }
            ],
            "project": "proven-mystery-473711-n3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal",
            "google_compute_subnetwork.subred_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cliente",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/disks/vm-cliente"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-cliente",
            "instance_id": "8099253505116668961",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "macale:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQW3hODvTHK138k8UdfMz3bfS7PQb1PuU+gnWQjOHD5eML+YAbRNNoQxUTOkMQ7zzxz/96skpicz7PHXADnlbmZYuQ6wY+dmfRDRJcFa5U563k0DSUioFDwkK2Z1HjHHJVTenQHj/r+OfGSQ8Xe0sPFNzCY4cUO2xuD6cAccX8QIKt1YWkc/AhYsNYB3vUL/ci10nWUUtDokqH+ad6VRC9B/JO3WQDkcKfSc0aMunJmwruuROMMDtJqrKzMqbNZGHz/ym92KMaheP3EE9OfJaA1Zlg3feU0iceb37lJgH2KtjbFwkIZ0N9N46rqGroF8hfXxbBLvJPgYCjYouV2VVexgkUHvAzdmyRPhyfUmL+eUmhfcEmUZZ+WgpBz56SxtXf/R2vW0DodoN/JZSFnhlT7Gj8xHOiovKgrTcN78F/+c [...]
              "startup-script": "#!/bin/bash\n# === Script de inicialización del cliente PostgreSQL ===\nLOGFILE=\"/var/log/startup-cliente.log\"\nexec \u003e \u003e(tee -a \"$LOGFILE\") 2\u003e\u00261\n\necho \"==== [$(date)] Iniciando cliente PostgreSQL ====\"\n\napt-get update -y\napt-get install -y postgresql-client\n\necho \"Esperando a que el servidor PostgreSQL (10.0.2.2) esté disponible...\"\n\n# Esperar hasta que el servidor acepte conexiones\nwhile ! pg_isready -h \"10.0.2.2\" -p 5432  [...]
            },
            "metadata_fingerprint": "j4auQTu0IMI=",
            "name": "vm-cliente",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
                "network_ip": "10.0.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-privada",
                "subnetwork_project": "proven-mystery-473711-n3"
              }
            ],
            "project": "proven-mystery-473711-n3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-cliente",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "privada"
            ],
            "tags_fingerprint": "QUTFGf-VgI0=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.servidor",
            "google_compute_network.vpc_principal",
            "google_compute_subnetwork.subred_privada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "servidor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251014",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/disks/vm-servidor"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-servidor",
            "instance_id": "2663354105716606039",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "macale:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDQW3hODvTHK138k8UdfMz3bfS7PQb1PuU+gnWQjOHD5eML+YAbRNNoQxUTOkMQ7zzxz/96skpicz7PHXADnlbmZYuQ6wY+dmfRDRJcFa5U563k0DSUioFDwkK2Z1HjHHJVTenQHj/r+OfGSQ8Xe0sPFNzCY4cUO2xuD6cAccX8QIKt1YWkc/AhYsNYB3vUL/ci10nWUUtDokqH+ad6VRC9B/JO3WQDkcKfSc0aMunJmwruuROMMDtJqrKzMqbNZGHz/ym92KMaheP3EE9OfJaA1Zlg3feU0iceb37lJgH2KtjbFwkIZ0N9N46rqGroF8hfXxbBLvJPgYCjYouV2VVexgkUHvAzdmyRPhyfUmL+eUmhfcEmUZZ+WgpBz56SxtXf/R2vW0DodoN/JZSFnhlT7Gj8xHOiovKgrTcN78F/+c [...]
              "startup-script": "#!/bin/bash\nLOGFILE=\"/var/log/startup-servidor.log\"\nexec \u003e \u003e(tee -a $LOGFILE) 2\u003e\u00261\nset -e\n\necho \"Configurando PostgreSQL...\"\n\napt-get update -y\napt-get install -y postgresql postgresql-contrib\n\nsudo -u postgres psql -c \"CREATE USER usuario1 WITH PASSWORD 'usuario';\"\nsudo -u postgres psql -c \"CREATE DATABASE prueba OWNER usuario1;\"\n\nPG_CONF=\"/etc/postgresql/15/main/postgresql.conf\"\nPG_HBA=\"/etc/postgresql/15/main/pg_hba [...]
            },
            "metadata_fingerprint": "LCVHhhb9XgI=",
            "name": "vm-servidor",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-privada",
                "subnetwork_project": "proven-mystery-473711-n3"
              }
            ],
            "project": "proven-mystery-473711-n3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/zones/europe-west1-b/instances/vm-servidor",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "privada"
            ],
            "tags_fingerprint": "QUTFGf-VgI0=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal",
            "google_compute_subnetwork.subred_privada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "mtu": 0,
            "name": "vpc-principal",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7596472590358611043",
            "project": "proven-mystery-473711-n3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-25T04:55:14.448-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/proven-mystery-473711-n3/regions/europe-west1/routers/vpc-router",
            "name": "vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "project": "proven-mystery-473711-n3",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/routers/vpc-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "proven-mystery-473711-n3/europe-west1/vpc-router/vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "proven-mystery-473711-n3",
            "region": "europe-west1",
            "router": "vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subred_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-25T04:55:14.749-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-privada",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subred-privada",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proven-mystery-473711-n3",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-privada",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subred_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-25T04:55:14.651-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-publica",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subred-publica",
            "network": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/global/networks/vpc-principal",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proven-mystery-473711-n3",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proven-mystery-473711-n3/regions/europe-west1/subnetworks/subred-publica",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_principal"
          ]
        }
      ]
    }
  ]
}